--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <p class="lead" id="date"></p>
                 <hr class="my-4">
                 <p>We have you covered.</p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Hello</a>
+                <button class="btn btn-primary btn-lg" id="hello" onclick="sayHello()">Hello</button>
             </div>
         </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
